...
const String mergeConflictNotificationTitle = "<Merge Conflict> Tap to fix";
const String mergeConflictNotificationBody = "There is an irreconcilable difference between the local and remote changes";

// Settings Page
const String defaultSyncMessage = "Last Sync: %s (Mobile)";
const String defaultSyncMessageTimeFormat = "yyyy-MM-dd HH:mm";
const String defaultPostFooter = '\n<sub>CREATED WITH <a href="https://github.com/ViscousPot/GitSync">REPOSYNC AI</a> (based on GitSync)</sub>';

const String apiBaseUrl = "https://api.gitsync.viscouspotenti.al";

const String documentationLink = "https://gitsync.viscouspotenti.al/wiki/";
const String troubleshootingLink = "https://gitsync.viscouspotenti.al/wiki/troubleshooting";
const String androidLimitedFilepathCharactersLink = "https://gitsync.viscouspotenti.al/wiki/troubleshooting#android-limited-filepath-characters";
...
