...
                      isConfirm ? colours.primaryNegative.withValues(alpha: 0.15) : colours.primaryWarning.withValues(alpha: 0.15),
                    ),
                    shape: WidgetStatePropertyAll(RoundedRectangleBorder(borderRadius: BorderRadius.all(cornerRadiusSM))),
                    padding: WidgetStatePropertyAll(EdgeInsets.symmetric(vertical: spaceXS)),
                  ),
                  child: Text(
                    "Allow",
                    style: TextStyle(
                      color: isConfirm ? colours.primaryNegative : colours.primaryWarning,
                      fontSize: textSM,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
...
