...
    "enterPAT": "個人アクセストークン（PAT）を入力",
    "usePAT": "PATを使用",
    "oauthAllRepos": "OAuth (全リポジトリ)",
    "oauthScoped": "OAuth (スコープ限定)",
    "ensureTokenScope": "フル機能を利用するために、トークンに \"repo\" スコープが含まれていることを確認してください。",
    "user": "ユーザー",
    "exampleUser": "JohnSmith12",
    "token": "トークン",
    "exampleToken": "ghp_1234abcd5678efgh",
    "login": "ログイン",
    "pubKey": "公開鍵",
    "privKey": "秘密鍵",
    "passphrase": "パスフレーズ",
    "privateKey": "秘密鍵",
    "sshPubKeyExample": "ssh-ed25519 AABBCCDDEEFF112233445566",
...
