appId: de.repoautofix.reposyncai
---
- launchApp
- assertVisible: "GitSync"
- runFlow:
    when:
      notVisible: "Use for Sync Tile"
    commands:
      - tapOn: "Quick Sync Settings"
- scroll
- scroll
- takeScreenshot: generate_screenshots/raw/screenshot_quick_sync_settings
