appId: de.repoautofix.reposyncai
---
- runFlow: ./assert.yaml
- tapOn: "SELECT APP(S)"
- tapOn: "Search"
- inputText: "obsi"
- tapOn:
    text: "OBSIDIAN"
    index: 0
- tapOn: "SAVE"
- runFlow:
    when:
      notVisible: "Sync on app(s) opened"
    commands:
      - tapOn: "App Sync Settings"
- assertVisible: "OBSIDIAN"
- tapOn: "Sync on app(s) opened"
- tapOn: "Sync on app(s) closed"
