appId: de.repoautofix.reposyncai
---
- runFlow:
    when:
      platform: Android
    commands:
      - launchApp:
          appId: de.repoautofix.reposyncai
- assertVisible: "GitSync"
- tapOn: "repository settings"
- assertVisible: "SETTINGS"
- takeScreenshot: generate_screenshots/raw/screenshot_settings
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "back"
